--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
+
+management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=health,info,shutdown
