--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.servlet.multipart.max-request-size=1MB
 
 management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=health,info,shutdown
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://192.168.99.101:3306/springdemo
+spring.datasource.username=spring
+spring.datasource.password=spring
